# substack-articles-search-engine

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  cloudbuild_fastapi.yaml  deploy_fastapi.sh  main.py  prefect.yaml  pyproject.toml  requirements.txt
.github/workflows/: cd.yaml  ci.yaml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
src/: config.py
src/api/: main.py
src/api/exceptions/: exception_handlers.py
src/api/middleware/: logging_middleware.py
src/api/models/: api_models.py  provider_models.py
src/api/routes/: search_routes.py
src/api/services/: generation_service.py  search_service.py  semantic_cache_service.py
src/api/services/providers/: openrouter_service.py
src/api/services/providers/utils/: evaluation_metrics.py  messages.py  prompts.py
src/configs/: feeds_rss.yaml
src/infrastructure/qdrant/: qdrant_vectorstore.py
src/infrastructure/supabase/: create_db.py  delete_db.py  init_session.py
src/models/: article_models.py  sql_models.py  vectorstore_models.py
src/pipelines/flows/: embeddings_ingestion_flow.py  rss_ingestion_flow.py
src/pipelines/tasks/: fetch_rss.py  ingest_embeddings.py  ingest_rss.py
src/utils/: logger_util.py
