[project]
name = "substack-articles-search-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru==0.7.3",
    "prefect==3.6.26",
    "psutil==7.2.2",
    "psycopg2-binary==2.9.11",
    "pydantic==2.13.2",
    "pydantic-settings==2.13.1",
    "sqlalchemy==2.0.49",
]
